Closed Bug 369011 Opened 19 years ago Closed 19 years ago

[FIX] mInNotification has a random value in XML

Categories

(Core :: XML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

HTMLContentSink has a zeroing operator new. XMLContentSink does not, so members of nsContentSink end up with random values in XML, except where explicitly initialized. Patch coming up...
Attached patch FixSplinter Review
I also moved some HTML-only stuff back into nsHTMLContentSink and reordered some members to put the small ones next to each other.
Attachment #253673 - Flags: superreview?(jonas)
Attachment #253673 - Flags: review?(jonas)
Blocks: 368917
Attachment #253673 - Flags: superreview?(jonas)
Attachment #253673 - Flags: superreview+
Attachment #253673 - Flags: review?(jonas)
Attachment #253673 - Flags: review+
Fixed. Thanks for the fast review!
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: