Make sure to initialize all members and that sort of thing.  Bug 369011, r+sr=sicking