content/xbl/src/nsXBLContentSink.h
@@ -92,6 +92,8 @@ public:
   nsXBLContentSink();
   ~nsXBLContentSink();
 
+  NS_DECL_AND_IMPL_ZEROING_OPERATOR_NEW
+
   nsresult Init(nsIDocument* aDoc,
                 nsIURI* aURL,
                 nsISupports* aContainer);
